--- a/index.html
+++ b/index.html
@@ -82,24 +82,24 @@
     </div>
 </nav>
 <!--navbar component ends-->
-<header>
     <div class="container-fluid banner" id="banner-head">
         <div class="row justify-content-center heading">
+            <div class="col-md-10 ">
+                <h1 class="text-center" style="font-weight: lighter; font-size: 6vw; letter-spacing: 5pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
+            </div>
             <div class="col-md-10">
-                <h1 style="font-weight: bolder; font-size: 8vw; letter-spacing: 15pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
-                <h3 style="font-weight: bolder; font-size: 4vw">the health and fitness soceity of <strong style="border-bottom: solid #93dbb3 4px;">Delhi Technological Society</strong></h3>
+                <h3 class="text-center" style="font-weight:lighter; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
             </div>
         </div>
     </div>
-</header>
 
 <div id="theme"></div>
 
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="zoom-in" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:#749C75;"></i>What we do.</h1>
-        <p class="col-md-9" data-aos="fade-in" data-aos-duration="900" style="color: black; font-weight: bold">
+        <h1 class="col-md-9" data-aos="slide-down" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:#749C75;"></i>What we do.</h1>
+        <p class="col-md-9" data-aos="slide-up" data-aos-duration="900" style="color: black; font-weight: bold">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -130,22 +130,22 @@
         </p>
     </div>
     <div id="img-group" class="row justify-content-center">
-        <div class="col-md-3 m-3" data-aos="zoom-in" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="zoom-out" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="zoom-out" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="zoom-in" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="zoom-out" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="zoom-in" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
     </div>
@@ -164,8 +164,8 @@
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;" data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Web developers and designers </h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;" data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Web developers and designers </h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -177,8 +177,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Graphic designers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Graphic designers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -191,8 +191,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Content Writers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Content Writers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -205,8 +205,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Corporate Managers</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Corporate Managers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -219,8 +219,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="fade-in" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Health and fitness instructors</h3>
-            <p data-aos="zoom-in" data-aos-duration="1000" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Health and fitness instructors</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore ena aliqua. Ut enim ad
@@ -258,7 +258,7 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-4 mt-5" data-aos="zoom-out" data-aos-duration="800">
+        <div class="col-md-4 mt-5" data-aos="slide-down" data-aos-duration="800">
             <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:#749C75;"></i>Let's connect !!</h1>
         </div>
     </div>
@@ -266,10 +266,10 @@
         <div class="col-md-6 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-square fa-2x" style="color: #3B5998"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium fa-2x" style="color: #3cb371"></i></a>
-            <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: #c71610" ></i></a>
+            <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: whitesmoke;" ></i></a>
             <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-linkedin fa-2x" style="color: #0e76a8" ></i></a>
-            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-instagram fa-2x" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border-radius: 40%;" ></i></a>
-            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube fa-2x" style="color: #FF0000"></i></a>
+            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-instagram fa-2x" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border-radius: 20%;" ></i></a>
+            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube fa-2x" style="color: whitesmoke"></i></a>
         </div>
     </div>
 </div>
@@ -281,7 +281,7 @@
 <script>
     AOS.init({
         once:true,
-        offset:222,
+        offset:120,
     });
 </script>
 <script src="./assets/js/customjs.js"></script>
