--- a/index.html
+++ b/index.html
@@ -259,17 +259,17 @@
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5" data-aos="slide-down" data-aos-duration="800">
-            <h1 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:#749C75;"></i>Let's connect !!</h1>
+            <h2 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:#749C75;"></i>Let's connect !!</h2>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-6 mt-3" style="font-size: 24pt" >
-            <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-square fa-2x" style="color: #3B5998"></i></a>
-            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium fa-2x" style="color: #3cb371"></i></a>
-            <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles fas fa-envelope fa-2x" style="color: whitesmoke;" ></i></a>
-            <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-linkedin fa-2x" style="color: #0e76a8" ></i></a>
-            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-instagram fa-2x" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); border-radius: 20%;" ></i></a>
-            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube fa-2x" style="color: whitesmoke"></i></a>
+        <div class="col-md-5 mt-3" style="font-size: 24pt" >
+            <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
+            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
+            <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
+            <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-lg fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-lg fa-instagram"></i></a>
+            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube"></i></a>
         </div>
     </div>
 </div>
