--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h1 class="text-center" style="font-weight: lighter; font-size: 6vw; letter-spacing: 5pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
             </div>
             <div class="col-md-10">
-                <h3 class="text-center" style="font-weight:lighter; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
+                <h3 class="text-center" style="font-weight:bolder; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
             </div>
         </div>
     </div>
@@ -139,13 +139,13 @@
         <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
     </div>
@@ -263,7 +263,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-5 mt-3" style="font-size: 24pt" >
+        <div class="col-md-5 col-sm-10 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
