banner styling fixed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--navbar component-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
     <a class="navbar-brand" href="#banner-head">
-        <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
+        <img id="logo" src="./assets/images/LogoMono.png" width="40" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -64,19 +64,20 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" id="link" href="#banner-head">Home</a>
+
+                <a class="nav-link" id="link" href="#banner-head"><i class="fas fa-home fa-nav"></i>Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="link1" href="#what-we-do">What we do ?</a>
+                <a class="nav-link" id="link1" href="#what-we-do"><i class="fas fa-pen-fancy fa-nav"></i>About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="link2" href="#who-can-join">Who can join ?</a>
+                <a class="nav-link" id="link2" href="#who-can-join"><i class="fas fa-suitcase fa-nav"></i>Who can join ?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="link3" href="#blog">Our Blog</a>
+                <a class="nav-link" id="link3" href="#blog"><i class="fab fa-blogger-b fa-nav"></i>Our Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="link4" href="#connect">Connect</a>
+                <a class="nav-link" id="link4" href="#connect"><i class="fas fa-comment-alt fa-nav"></i>Connect</a>
             </li>
         </ul>
     </div>
@@ -85,10 +86,10 @@
     <div class="container-fluid banner" id="banner-head">
         <div class="row justify-content-center heading">
             <div class="col-md-10 ">
-                <h1 class="text-center" style="font-weight: lighter; font-size: 6vw; letter-spacing: 5pt; border-bottom: #dc493a solid 4px;">ELIXIR</h1>
+                <h1 class="text-center" style="color:whitesmoke; font-weight: lighter; font-size: 6vw; letter-spacing: 5pt; border-bottom: #9D6A2A solid 2px;">ELIXIR</h1>
             </div>
             <div class="col-md-10">
-                <h3 class="text-center" style="font-weight:lighter; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
+                <h3 class="text-center" style="color:whitesmoke; font-weight:lighter; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
             </div>
         </div>
     </div>
@@ -269,7 +270,6 @@
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
             <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-lg fa-linkedin-in"></i></a>
             <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-lg fa-instagram"></i></a>
-            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-youtube"></i></a>
         </div>
     </div>
 </div>
