--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h1 class="text-center" style="color:whitesmoke; font-weight: lighter; font-size: 6vw; letter-spacing: 5pt; border-bottom: #9D6A2A solid 2px;">ELIXIR</h1>
             </div>
             <div class="col-md-10">
-                <h3 class="text-center" style="color:whitesmoke; font-weight:lighter; font-size: 1.8vw">the health and fitness society of Delhi Technological University</h3>
+                <h3 class="text-center" style="color:rgba(255, 255, 255, 0.6);font-size: 1.8vw">the health society of Delhi Technological University</h3>
             </div>
         </div>
     </div>
