--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <!--about US part-->
 <div class="container-fluid" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="slide-down" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:#749C75;"></i>What we do.</h1>
-        <p class="col-md-9" data-aos="slide-up" data-aos-duration="900" style="color: black; font-weight: bold">
+        <h1 class="col-md-9" data-aos="slide-down" data-aos-duration="600"><i class="fas fa-check-double" style="margin:2vh; color:#EF5324;"></i>What we do.</h1>
+        <p class="col-md-9" data-aos="slide-up" data-aos-duration="900">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -140,13 +140,13 @@
         <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3" data-aos="slide-down" data-aos-duration="600">
+        <div class="col-md-3 m-3" data-aos="slide-up" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
     </div>
@@ -159,14 +159,15 @@
 <div class="container-fluid info-card-group" id="who-can-join">
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h1><i class="fas fa-handshake" style="margin:2vh; color:#749C75;"></i>Who can join us?</h1>
+            <h1 style="color: #FFF"><i class="fas fa-handshake" style="margin:2vh; color:#EF5324;"></i>Who can join us?</h1>
         </div>
     </div>
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;" data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Web developers and designers </h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;color: #FFF;" data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Web developers and designers </h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold" >
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -175,11 +176,10 @@
         </div>
     </div>
     <!--info card ends here---->
-
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Graphic designers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block; color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Graphic designers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -192,8 +192,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Content Writers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Content Writers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -206,8 +206,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Corporate Managers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Corporate Managers</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -220,8 +220,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#749C75;"></i>Health and fitness instructors</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: black; font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Health and fitness instructors</h3>
+            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore ena aliqua. Ut enim ad
@@ -236,7 +236,7 @@
     <!--join here button--->
     <div class="row justify-content-center">
         <div class="col-md-6 mt-5" data-aos="slide-up" data-aos-duration="500">
-            <h2 style="display: inline-block; margin:1vh 1vh;">Interested in joining Us?</h2>
+            <h2 style="color:#FFF; display: inline-block; margin:1vh 1vh;">Interested in joining Us?</h2>
             <button class="btn btn-danger">APPLY !</button>
         </div>
 
@@ -260,11 +260,11 @@
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5" data-aos="slide-down" data-aos-duration="800">
-            <h2 style="display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:1vh; color:#749C75;"></i>Let's connect !!</h2>
+            <h2 style="color:#FFF; display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:2vh; color:#EF5324;"></i>Let's connect !!</h2>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-5 mt-3" style="font-size: 24pt" >
+        <div class="col-md-4 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
