--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 <div class="container-fluid" id="blog">
     <div class="row justify-content-center">
     <div class="col-md-10 mt-5">
-        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:#749C75;"></i>Love to read? Have a look at our medium blog!!</h2>
+        <h2 style="display: inline-block;"><i class="fab fa-readme fa-2x" style="margin:1vh; color:#1d252c;"></i>Love to read? Have a look at our medium blog!!</h2>
     </div>
     </div>
 </div>
