--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!--preloader ends here-->
 
 <!--navbar component-->
-<nav class="navbar navbar-expand-lg fixed-top navbar-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
     <a class="navbar-brand" href="#banner-head">
         <img id="logo" src="./assets/images/LogoMono.png" width="40" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
@@ -259,12 +259,12 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-4 mt-5" data-aos="slide-down" data-aos-duration="800">
+        <div class="col-md-4 col-sm-6 mt-5" data-aos="slide-down" data-aos-duration="800">
             <h2 style="color:#FFF; display: inline-block;"><i class="fas fa-hand-peace fa-2x" style="margin:2vh; color:#EF5324;"></i>Let's connect !!</h2>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-4 mt-3" style="font-size: 24pt" >
+        <div class="col-md-4 col-sm-6 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
             <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
