join us page created

--- a/index.html
+++ b/index.html
@@ -154,94 +154,51 @@
 </div>
 <!--about US part ends here-->
 
-<div id="still-image"></div>
 <!--who can join us-->
-<div class="container-fluid info-card-group" id="who-can-join">
+<div class="container-fluid info-card-group" id="who-can-join-us">
+<!--this section links to the #who-can-join-page component-->
     <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h1 style="color: #FFF"><i class="fas fa-handshake" style="margin:2vh; color:#EF5324;"></i>Who can join us?</h1>
-        </div>
-    </div>
-    <!--info card here---->
-    <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;color: #FFF;" data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Web developers and designers </h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold" >
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                </p>
-        </div>
-    </div>
-    <!--info card ends here---->
-    <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block; color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Graphic designers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et doli</p>
-        </div>
-    </div>
-    <!--info card ends here---->
+        <div class="col-md-5 col-sm-6 left-box">
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-12 col-sm-12 mt-4 mb-4">
+                    <h2 align="center" style="color: whitesmoke">Participate in sessions</h2>
+                </div>
+                <div class="col-md-12 col-md-12">
+                    <hr style="margin:10px auto; width:60px; border: 2px solid #5ac88b; background: #5ac88b">
+                </div>
+                <div class="col-md-12 col-sm-12">
+                    <p align="center">Being healthy is the best gift you can give to yourself.
+                        Participate in the various sessions organised by Elixir by registering with us
+                        and be healthy and fit.</p>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <button class="btn btn-outline-success">Register to attend</button>
+                </div>
 
-    <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Content Writers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis rure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i</p>
+            </div>
+        </div>
+        <div class="col-md-5 col-sm-6 mb-5">
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-12 col-sm-12 mt-4 mb-4">
+                    <h2 align="center" style="color: whitesmoke">Become a team member</h2>
+                </div>
+                <div class="col-md-12 col-md-12">
+                    <hr style="margin:10px auto; width:60px; border: 2px solid #5ac88b; background: #5ac88b">
+                </div>
+                <div class="col-md-12 col-sm-12">
+                    <p align="center">You can apply to be a member of the organising team and
+                        be a part of the various departments at Elixir — Content,
+                        PR & Publicity, IT & Design, Corporate, Logistics, Health Expert.</p>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <a href="./JOINING-ELIXIR.html">
+                        <button class="btn btn-outline-success">Apply for membership</button>
+                    </a>
+                </div>
+
+            </div>
         </div>
     </div>
-    <!--info card ends here---->
-
-    <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Corporate Managers</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis noe dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i</p>
-        </div>
-    </div>
-    <!--info card ends here---->
-
-    <div class="row justify-content-center">
-        <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;  color: #FFF;"  data-aos="slide-up" data-aos-duration="600"><i class="fas fa-lightbulb" style="margin:1vh; color:#EF5324;"></i>Health and fitness instructors</h3>
-            <p data-aos="slide-down" data-aos-duration="500" style="color: rgba(255,255,255,0.6); font-weight: bold">ncididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i
-                ncididunt ut labore ena aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
-                a commodo consequat. Duis aute irure dolor i</p>
-        </div>
-    </div>
-    <!--info card ends here---->
-
-    <!--join here button--->
-    <div class="row justify-content-center">
-        <div class="col-md-6 mt-5" data-aos="slide-up" data-aos-duration="500">
-            <h2 style="color:#FFF; display: inline-block; margin:1vh 1vh;">Interested in joining Us?</h2>
-            <button class="btn btn-danger">APPLY !</button>
-        </div>
-
-    </div>
-    <!--join here button end--->
 
 </div>
 <!--who can join us ends here-->
@@ -266,7 +223,7 @@
     <div class="row justify-content-center">
         <div class="col-md-4 col-sm-6 mt-3" style="font-size: 24pt" >
             <a href="https://www.facebook.com/elixirHealthSociety/" target="_blank"><i class="sm_handles fab fa-facebook-f"></i></a>
-            <a href="./WIP.html" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
+            <a href="#" target="_blank"><i class="sm_handles fab fa-medium-m"></i></a>
             <a href="mailto:elixir.healthsociety@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
             <a href="https://www.linkedin.com/company/elixir-dtu-health-club-123/"><i class=" sm_handles fab fa-lg fa-linkedin-in"></i></a>
             <a href="https://www.instagram.com/elixir.healthsociety/" target="_blank"><i class="sm_handles fab fa-lg fa-instagram"></i></a>
